completed a 6kyu challenge

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/main2.js"></script>
+    <script type="text/javascript" src="js/codewars1.js"></script>
   </body>
 </html>
 <html></html>
